--- a/.github/workflows/cryptocurrency_exchange_app.yaml
+++ b/.github/workflows/cryptocurrency_exchange_app.yaml
@@ -17,7 +17,6 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -26,6 +25,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Find cache modules
     - run: npm ci
+    - name: Build prject
     - run: npm run build --if-present
+    - name: Run unit tests
     - run: npm test
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag cryptocurrency_exchange_app:$(date +%s)
