--- a/.github/workflows/cryptocurrency_exchange_app.yaml
+++ b/.github/workflows/cryptocurrency_exchange_app.yaml
@@ -32,4 +32,4 @@ jobs:
     - name: Run unit tests
     - run: npm test
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag cryptocurrency_exchange_app:$(date +%s)
+    - run: docker build . --file Dockerfile --tag cryptocurrency_exchange_app:$(date +%s)
